--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -22,7 +22,7 @@
     <header></header>
 
     <footer>
-        <p>Best School</p>
+        <p>Holberton School</p>
     </footer>
 </body>
 </html>
